stlye: fix mobile heading size on mobile contact page

--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -27,6 +27,7 @@
       h1 {
         margin: 0;
         padding-bottom: 1rem;
+        font-size: 2.5rem;
       }
       .section-text {
         width: 90%;
@@ -121,6 +122,9 @@
   @media screen and (min-width: $md) {
     .container {
       max-width: 800px;
+      h1 {
+        font-size: 3rem;
+      }
     }
   }
   @media screen and (min-width: $lg) {
